# NeoBench

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  create_workspace.py  extract_pal.py  fixsum.sh  git_upload.sh  install_layout.sh  install_neobench.sh  linker.ld  makefile  makefile.backup  memory.ld  neobench-m68k-68000.json  neobench-m68k-68010.json  neobench-m68k-68020.json  neobench-m68k-68030.json  neobench-m68k-68040.json  neobench-m68k-68060.json  neobench-m68k.json  png2amiga_bitplanes.py  romvec.s  vectors.S
.cargo/: config.toml  m68k-unknown-none.json
.github/workflows/: build-rom.yml
BootROM/: bootrom.512k  bootrom.elf  bootrom.s  bootrom.tmp  bpl.py  make_font8x8.py  makefile
BootROM/src/: bootrom.cpp  neoboot.raw  neoboot_raw.h  splash.bpl  (+3 more)
S/: startup-sequence  user-startup
bootloader/: makefile
docs/: VISTA-DESKTOP.md
include/: stddef.h  stdint.h  stdlib.h  string.h
kernel/: kernel_stub.asm
neoboot/: Cargo.toml  linker.ld
resources/: background_designs.txt  backgrounds.c  logo_design.txt
roms/: boot16.asm  flash0.img  floppy.img  mbr.ld  neokick.romconf  neorom.ld  stage2.ld
src/: aga_chipset.c  amiga_mmu.c  amiga_workbench.c  bios_interface.c  compact_boot.c  copper_effects.c  kernel.c  lib.rs  main.c  main.rs  mc68060.c  mod_player.c  multiboot.c  neobench_desktop.c  rom.S  rom_x86.S  stdlib.c  string.c
src/neoboot/: Cargo.toml
src/neoboot/src/: lib.rs  main.rs
src/neoboot/targets/: neobench-m68k.json
src/neorom/: Cargo.toml  memory.ld  vectors.s
src/neorom/src/: lib.rs  main.rs
targets/: neobench-m68k.json
(+34 files in other folders)
