[package]
name = "neorom"
version = "0.1.0"
edition = "2021"

[dependencies]
neolib  = { path = "../neolib" }
neoboot = { path = "../neoboot" }

[lib]
path = "src/lib.rs"


[profile.dev]
panic = "abort"
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

[build-dependencies]
